--- a/external.css
+++ b/external.css
@@ -1,13 +1,12 @@
 html{
   background-color: darkgray;
 }
-h1{
-  margin: 0px;
-  background-color: black;
+#head3{
+  margin: 0px;  
   color: blue;
   font-size: 30px;
 }
-h3{
+#head2{
   color: green;
   font-size: 20px;
   font-family: monospace;
@@ -20,4 +19,23 @@ p{
 img{
   height: 200px;
   width: 200px;
+
+}
+#head1 {
+color: green;
+font-size: 30px;
+background-color: black;
+}
+#list1  {
+  background-color: aqua;
+  border: 2px solid green;
+}
+#list2 {
+  background-color: blue;
+  border: 2px solid red;
+}
+
+#list3{
+  background-color: blueviolet;
+  border: 2px solid purple;
 }
